--- a/webpack-demo/src/public/index.less
+++ b/webpack-demo/src/public/index.less
@@ -1,11 +1,7 @@
-.wrap {
-  .name {
+.body {
+  background-color: blanchedalmond;
+  .title {
     color: green;
     font-size: 25px;
-  }
-
-  .des {
-    color: red;
-    font-size: 20px;
   }
 }
